# mlwg-ssm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  install.sh  pyproject.toml
.claude/skills/sensitivity_analysis/: SKILL.md
notebooks/: intro_to_state_space_models.ipynb  learning_state_space_models.ipynb
src/: system.py
src/state_space_model/: system.py
src/state_space_model/systems/: __init__.py
src/state_space_model/systems/cartpole/: dynamics.py
src/systems/: __init__.py
src/systems/cartpole/: __init__.py  cli.py  dynamics.py  rendering.py
