[project]
name = "mlwg"
version = "0.1.0"
description = "Tutorial: Making Real Machines Work: Modelling with States, Actions and Observations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cpu]",
    "jaxtyping",
    "matplotlib",
    "jupyter",
    "numpy",
]

[project.scripts]
cartpole-frame = "src.systems.cartpole.cli:frame"
cartpole-sim   = "src.systems.cartpole.cli:sim"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
]
